alignment corrections

--- a/FrontEnd/src/app/home/home.component.css
+++ b/FrontEnd/src/app/home/home.component.css
@@ -25,7 +25,7 @@ body{
     margin-top: 0px;
     width: 100vw;
     height: 100vh;
-    position: bottom right;
+    position: bottom left;
 }
 .box{
     display: flex;
